--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 @import 'config';
+@import 'menu';
+
 * {
   box-sizing: border-box;
 }
@@ -10,7 +12,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-length: 1.5;
+  line-height: 1.5;
 }
 
 //headings
